@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{This is a test caption.}
+\caption{This is a test caption.\label{tab:matrix}}
 \begin{tabular}{cccc}
 H1 & H2 & H3 & H4\\
 0.000 & 1.000 & 2.000 & 3.000\\
